Homepage for Omnicat

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>lackac/omnicat @ GitHub</title>
+  <title>Omnicat</title>
 
   <style type="text/css">
     body {
@@ -16,6 +16,7 @@
       margin: 0 auto;
       width: 700px;
     }
+    #logo { float: left; padding-right: 32px; }
     h1 { font-size: 3.8em; color: #000000; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
@@ -35,12 +36,7 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/lackac/omnicat/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/lackac/omnicat/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
+    <div id="logo"><img src="omnicat.png" alt="Omnicat"/></div>
 
     <h1><a href="http://github.com/lackac/omnicat">Omnicat</a>
       <span class="small">by <a href="http://github.com/lackac">lackac</a></span></h1>
@@ -49,24 +45,33 @@
       Autocomplete GitHub repositories in Omnibox
     </div>
 
-    <p>Ever find you have to look at a repository on GitHub you know the name of but not the owner? You go to https://github.com or you may already have a search keyword for GitHub in your browser, you enter the name of the repository, wait a few seconds and then try to identify the repository you're looking for in the search results.
+    <p style="clear: left;">Ever find you have to look at a repository on GitHub you know the
+    name of but not the owner? You go to https://github.com or you may
+    already have a search keyword for GitHub in your browser, you enter
+    the name of the repository, wait a few seconds and then try to
+    identify the repository you're looking for in the search
+    results.</p>
 
-This can be easier and quicker. Install this chrome extension and start typing 'gh<tab>' in Omnibox (the location bar). Anything you type after this will be autocompleted to GitHub repositories by owner and/or name. The repositories are ordered by the number of watchers and you can even see their descriptions right on the spot. Choose the one you're looking for and you'll be on the page of the repository in no time.
+    <p>This can be easier and quicker. Install this chrome extension and
+    start typing <code>gh&lt;tab&gt;</code> in Omnibox (the location bar).
+    Anything you type after this will be autocompleted to GitHub
+    repositories by owner and/or name. The repositories are ordered by
+    the number of watchers and you can even see their descriptions right
+    on the spot.  Choose the one you're looking for and you'll be on the
+    page of the repository in no time.</p>
 
-Much quicker and easier, isn't it? Now go and contribute to open source!
-</p><h2>Install</h2>
-<p>Install from Chrome Web Store: https://chrome.google.com/webstore/developer/detail/hljoheoboihichiahhbkahljbbbjpigg</p>
-<h2>Authors</h2>
-<p>László Bácsi (lackac@lackac.hu)</p>
+    <p>Much quicker and easier, isn't it? Now go and contribute to open source!</p>
 
+    <h2>Install</h2>
 
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/lackac/omnicat/zipball/master">zip</a> or
-      <a href="http://github.com/lackac/omnicat/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+    <p>Install the extension from the <a href="https://chrome.google.com/webstore/developer/detail/hljoheoboihichiahhbkahljbbbjpigg">Chrome Web Store</a>.</p>
+
+    <h2>Authors</h2>
+    <p><a href="http://icanscale.com">László Bácsi</a></p>
+
+    <h2>Contribute</h2>
+
+    <p>You can clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/lackac/omnicat</pre>
     </p>
