Logo links to Chrome Web Store

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       width: 700px;
     }
     #logo { float: left; padding-right: 32px; }
+    #logo a img { border: 0; }
     h1 { font-size: 3.8em; color: #000000; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
@@ -36,7 +37,7 @@
 
   <div id="container">
 
-    <div id="logo"><img src="omnicat.png" alt="Omnicat"/></div>
+    <div id="logo"><a href="https://chrome.google.com/webstore/developer/detail/hljoheoboihichiahhbkahljbbbjpigg"><img src="omnicat.png" alt="Omnicat"/></a></div>
 
     <h1><a href="http://github.com/lackac/omnicat">Omnicat</a>
       <span class="small">by <a href="http://github.com/lackac">lackac</a></span></h1>
