Update with new icon and correct github link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <p style="clear: left;">Ever find you have to look at a repository on GitHub you know the
-    name of but not the owner? You go to https://github.com or you may
+    name of but not the owner? You go to <a href="https://github.com">github.com</a> or you may
     already have a search keyword for GitHub in your browser, you enter
     the name of the repository, wait a few seconds and then try to
     identify the repository you're looking for in the search
