Move js, css and image files to separate subdirectories

--- a/ext/background.html
+++ b/ext/background.html
@@ -1,1 +1,8 @@
-<script src="background.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <script src="js/background.js" type="text/javascript" charset="utf-8"></script>
+</head>
+<body>
+</body>
+</html>
