--- a/ext/background.html
+++ b/ext/background.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="js/zepto.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/background.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
