Create repository index and add reload button to options page
Towards #3

--- a/ext/options.html
+++ b/ext/options.html
@@ -25,6 +25,10 @@
         <input type="text" id="token"/>
         <div id="token-validator"></div>
         <p class="hint">find it on GitHub on your <a href="https://github.com/account/admin" target="_blank">Account Admin page</a>.</p>
+        <p id="cache-status">
+          Repository index <span></span>.<br/>
+          <button>Reload</button>
+        </p>
       </div>
     </div>
   </div>
