Include own repositories in results with a special highlight
Finishes #3

--- a/ext/background.html
+++ b/ext/background.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <script src="js/zepto.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/github.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/background.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
