Some useful information on the Options Page

--- a/ext/options.html
+++ b/ext/options.html
@@ -12,8 +12,11 @@
 
 <body>
   <div class="containter">
-    <h2><img src="images/icon48.png" alt="Omnicat"/> Omnicat Options</h2>
-    <div id="options">
+    <header>
+      <h2><img src="images/icon48.png" alt="Omnicat"/> Omnicat Options</h2>
+    </header>
+
+    <section id="options">
       <label>
         <input type="checkbox" id="include-private"/>
         Include your private repositories
@@ -57,7 +60,14 @@
         </label>
         <input type="text" id="custom-db"/>
       </div>
-    </div>
+    </section>
+
+    <footer>
+      <div id="cloudant">Database hosting provided by<br/><img src="http://static.tumblr.com/mdlmcup/wQNl7b84b/logo-screen-small.png" alt="Cloudant"/></div>
+      <div>Created by <a href="https://github.com/lackac">LacKac</a></div>
+      <div>Twitter: <a href="https://twitter.com/#!/icanscale">@icanscale</a></div>
+      <div>Issue tracker <a href="https://github.com/lackac/omnicat/issues">on GitHub</a></div>
+    </footer>
   </div>
 </body>
 </html
