--- a/ext/options.html
+++ b/ext/options.html
@@ -11,6 +11,8 @@
 <script type="text/javascript"></script>
 
 <body>
+  <a href="http://github.com/lackac/omnicat"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+
   <div class="containter">
     <header>
       <h2><img src="images/icon48.png" alt="Omnicat"/> Omnicat Options</h2>
