Wrap Cloudant logo in an anchor

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    #cloudant img { vertical-align: middle; }
+    #cloudant img { vertical-align: middle; border: 0; }
   </style>
 </head>
 
@@ -82,7 +82,7 @@
       <pre>$ git clone git://github.com/lackac/omnicat</pre>
     </p>
 
-    <div id="cloudant">Database hosting provided by <img src="http://static.tumblr.com/mdlmcup/wQNl7b84b/logo-screen-small.png" alt="Cloudant"/></div>
+    <div id="cloudant">Database hosting provided by <a href="https://cloudant.com/"><img src="http://static.tumblr.com/mdlmcup/wQNl7b84b/logo-screen-small.png" alt="Cloudant"/></a></div>
 
   </div>
 
