Wrap Cloudant logo in an anchor

--- a/ext/options.html
+++ b/ext/options.html
@@ -65,7 +65,7 @@
     </section>
 
     <footer>
-      <div id="cloudant">Database hosting provided by<br/><img src="http://static.tumblr.com/mdlmcup/wQNl7b84b/logo-screen-small.png" alt="Cloudant"/></div>
+      <div id="cloudant">Database hosting provided by<br/><a href="https://cloudant.com/"><img src="http://static.tumblr.com/mdlmcup/wQNl7b84b/logo-screen-small.png" alt="Cloudant"/></a></div>
       <div>Created by <a href="https://github.com/lackac">LacKac</a></div>
       <div>Twitter: <a href="https://twitter.com/#!/icanscale">@icanscale</a></div>
       <div>Issue tracker <a href="https://github.com/lackac/omnicat/issues">on GitHub</a></div>
